[gd_scene load_steps=4 format=2]

[ext_resource path="res://PlayerController.gd" type="Script" id=1]
[ext_resource path="res://stop.png" type="Texture" id=2]
[ext_resource path="res://StrategyCamera.tscn" type="PackedScene" id=3]

[node name="PlayerController" type="Spatial"]
script = ExtResource( 1 )
_sections_unfolded = [ "Script" ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="PlayPauseButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 890.0
margin_top = 459.0
margin_right = 1018.0
margin_bottom = 587.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Textures" ]

[node name="Camera" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="CanvasLayer/PlayPauseButton" to="." method="_on_PlayPauseButton_pressed"]
